# platform.core.appfw.app-core

./: AUTHORS  CMakeLists.txt  appcore-common-wayland.pc.in  appcore-common-x.pc.in  appcore-common.pc.in  appcore-efl.pc.in  project.config
TC/unit/: Makefile  tslist  utc_ApplicationFW_appcore_efl_main_func.c  utc_ApplicationFW_appcore_exit_func.c  utc_ApplicationFW_appcore_get_rotation_state_func.c  utc_ApplicationFW_appcore_init_func.c  utc_ApplicationFW_appcore_measure_start_func.c  utc_ApplicationFW_appcore_measure_time_from_func.c  utc_ApplicationFW_appcore_measure_time_func.c  utc_ApplicationFW_appcore_set_event_callback_func.c  utc_ApplicationFW_appcore_set_i18n_func.c  utc_ApplicationFW_appcore_set_rotation_cb_func.c  utc_ApplicationFW_appcore_unset_rotation_cb_func.c
debian/: app-template.install.in  changelog  control  libappcore-common-0.install.in  libappcore-common-dev.install.in  libappcore-efl-0.install.in  libappcore-efl-dev.install.in  rules
include/: SLP_Appcore_PG.h  appcore-common.h  appcore-config.h.in  appcore-efl.h  appcore-internal.h
packaging/: app-core.changes  app-core.spec  core-efl-wayland.target  core-efl.target
src/: appcore-Wayland.c  appcore-X.c  appcore-efl.c  appcore-group.c  appcore-i18n.c  appcore-measure.c  appcore-noti.c  appcore-pmcontrol.c  appcore-rotation.c  appcore-util.c  appcore.c
